--- a/.github/workflows/javascript-tests.js.yml
+++ b/.github/workflows/javascript-tests.js.yml
@@ -8,13 +8,13 @@ jobs:
     runs-on: unbuntu-latest
 
     strategy:
-    matrix:
-     node-version: [12.x]
+      matrix:
+        node-version: [12.x]
     
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup=vode@v1
+      uses: actions/setup=node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
