--- a/.github/workflows/javascript-tests.js.yml
+++ b/.github/workflows/javascript-tests.js.yml
@@ -1,16 +1,16 @@
-name: Run JavaScript Tests
+name: Run Javascript Tests
 
 on: [push]
 
 jobs:
   build:
 
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [12.x]
-    
+
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
@@ -18,8 +18,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
-    run: |
-      npm i
-      npm test
-    env: 
-      CI: true
+      run: |
+        npm i
+        npm test
+      env:
+        CI: true
